# astrafoto-bot

./: .env.example  Cargo.toml  README.md  paper.json  paper.txt
src/: bot.rs  config.rs  data_types.rs  error.rs  main.rs
src/stuff/: data_types.rs  error.rs  hook_types.rs  logger.rs  message_handler.rs  mod.rs  paper.rs  poller.rs  prompt.rs  repository.rs  route.rs  timestamp.rs  transport.rs  wa_types.rs
